--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,23 @@
+0.1.3
+=====
+
+Fixed increment by integer on a Count series.
+
+Turn off transactions in Redis pipelines.
+
+
+0.1.2
+=====
+
+Added simple transforms on all timeseries and ability to apply any function
+to a row of data when calling `get` and `series`.
+
+0.1.1
+=====
+
+Added ability to specify 'step' and 'resolution' in terms of hours, days,
+weeks, months and year.
+
 0.1.0
 =====
 
