--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+series-collapse
+===============
+
+Added `collapse` keyword argument to `series()` for collapsing an entire
+timeseries into a single row. Transforms are performed after the collapse,
+allowing easy calculation of aggregates across an entire timeseries.
+
+Fix inconsistency in gauge type when collapsing or condensing gauge data.
+Value for an interval is the last recorded gauge value now.
+
 0.3.0
 =====
 
