--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,18 +1,16 @@
-series-collapse
-===============
+0.4.0
+=====
 
 Added `collapse` keyword argument to `series()` for collapsing an entire
 timeseries into a single row. Transforms are performed after the collapse,
 allowing easy calculation of aggregates across an entire timeseries.
 
 Fix inconsistency in gauge type when collapsing or condensing gauge data.
-Value for an interval is the last recorded gauge value now.
+Value for an interval is the last recorded non-nuill gauge value now.
 
 Added support in `get()` and `series()` for joining multiple timeseries
-into a single result.
-
-When condensing gauge data, the last non-null value is used, rather than
-the last value in the series independent of whether it was set.
+into a single result by calling with a list of timeseries names rather
+than a single string.
 
 0.3.0
 =====
