--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+multiple-insert
+===============
+
+Adding support for inserting data into multiple intervals with a single
+call to `insert()`.
+
 0.4.0
 =====
 
