--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+0.4.3
+=====
+
+pin monthdelta requirement, pull request #22 from titusz
+https://github.com/agoragames/kairos/pull/22
+    
+
 0.4.2
 =====
 
