--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,13 @@
+0.5.0
+=====
+
+Provide callers with the ability to customize the fetching of data from a timeseries
+
 0.4.3
 =====
 
 pin monthdelta requirement, pull request #22 from titusz
 https://github.com/agoragames/kairos/pull/22
-    
 
 0.4.2
 =====
