--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,12 @@
+0.6.0
+=====
+
+New API to fully support customized data reading.
+
 0.5.0
 =====
 
-Provide callers with the ability to customize the fetching of data from a timeseries
+Provide callers with the ability to customize the fetching of data from a timeseries.
 
 0.4.3
 =====
