Implemented Cassandra timeseries and discovery support Changed behavior of sets to store all values

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,14 @@
+cassandra
+=========
+
+Added support for Cassandra storage.
+
+Added limits when querying properties of a SQL stat.
+
+Changed behavior of sets to include storage of all datapoints, positive
+or negative.
+
+
 0.7.1
 =====
 
