--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+master
+======
+
+Replace print statements with warnings for unsupported backends from @akabos
+https://github.com/agoragames/kairos/pull/40
+
 0.8.1
 =====
 
