--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,14 @@
-master
-======
+0.9.0
+=====
 
 Replace print statements with warnings for unsupported backends from @akabos
 https://github.com/agoragames/kairos/pull/40
 
 Added `Timeseries.bulk_insert` with optimized Redis and Mongo implementations
 https://github.com/agoragames/kairos/pull/41
+
+Fixed relative TTLs for Redis and Cassandra, fixng #14
+https://github.com/agoragames/kairos/pull/42
 
 0.8.1
 =====
